# locness-tsg

./: .gitignore  default_config.yaml  main.py  pyproject.toml
tests/: conftest.py  test_main.py  test_parser.py
tests/data/: 2024_03_20_152p_HTcapture_SSout_notXML.TXT
tsgreader/: main.py  serialreader.py  synthetic_data.py  tsgparser.py
