[project]
name = "tsgreader"
version = "0.1.0"
description = "TSG (Thermosalinograph) data reader and parser"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gsw>=3.6.19",
    "pyserial>=3.5",
    "pyyaml>=6.0.2",
]

[project.scripts]
tsg = "tsgreader.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
